; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_hashtable_seed.c_json_object_seed.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_hashtable_seed.c_json_object_seed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hashtable_seed = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @json_object_seed(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* @hashtable_seed, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = call i64 (...) @generate_seed()
  store i64 %11, i64* %3, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = load i64, i64* %3, align 8
  store i64 %13, i64* @hashtable_seed, align 8
  br label %14

14:                                               ; preds = %12, %1
  ret void
}

declare dso_local i64 @generate_seed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
